# bbs-auto-farmer

./: .gitignore  LICENSE  README.md  build_installer.py  installer.iss  main.py  pyproject.toml
config/: user_settings.json
core/: actions.py  capture.py  esc_listener.py  state.py  stop_controller.py  window_utils.py
core/logic/: brave_battles.py  co_op.py  collect_tickets.py  end_menu.py  end_menu_singleplayer.py  epic_raid.py  gameplay.py  handle_gameplay_single_player.py  retry_special_moves.py  retry_stage.py  sub_stories.py
gui/: banner.py  main_window.py  style.qss
utils/: debug.py  logger.py  resource_manager.py  settings.py
