[project]
name = "bbs-auto-farmer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python==4.12.0.88",
    "pyautogui==0.9.54",
    "mss==10.0.0",
    "pygetwindow==0.0.9",
    "pywinauto==0.6.9",
    "keyboard==0.13.5",
    "pyside6==6.9.1",
    "qtawesome==1.4.0",
    "pyinstaller==6.14.2",
]
